# eyedb

./: article-eyedb-linuxplus.odt
eyedb-bench/trunk/: .classpath  .project  ChangeLog  Makefile.am  README  RESULTS  TODO  autogen.sh  configure.in
eyedb-bench/trunk/dependencies/: Makefile.am
eyedb-bench/trunk/dependencies/poleposition/: Makefile.am  build.xml
eyedb-bench/trunk/doc/: benchmark-specs.html  petshop.odl
eyedb-bench/trunk/m4/java/: ac_prog_java.m4
eyedb-bench/trunk/results/: poleposition.csv  poleposition.ods  poleposition.txt  poleposition.xml  quicktour.ods
eyedb-bench/trunk/results/poleposition/: poleposition.csv
eyedb-bench/trunk/results/quicktour/: quicktour-revard.ods  quicktour-semnoz-2009-01-23--12-47.ods  quicktour-semnoz-2009-01-26--15-52.ods  quicktour-template.ods
eyedb-bench/trunk/run/: Makefile.am
eyedb-bench/trunk/run/cpp/: Makefile.am
eyedb-bench/trunk/run/java/: Makefile.am
eyedb-bench/trunk/run/quicktour/: Makefile.am
eyedb-bench/trunk/src/: Makefile.am
eyedb-bench/trunk/src/cpp/: Makefile.am
eyedb-bench/trunk/src/java/: .classpath  .project  Makefile.am
eyedb-bench/trunk/src/python/: openoffice-report.py
eyedb-bench/trunk/tmp/: barcelona-oql-query.sh  barcelona-oql-write.sh  results.ods
eyedb-bench/trunk/work/: bench.txt
eyedb-work/trunk/: ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  conf.sh  configure.in  libtool
eyedb-work/trunk/doc/: ROADMAP.txt
eyedb-work/trunk/m4/java/: README  ac_check_classpath.m4  ac_check_rqrd_class.m4  ac_prog_java.m4  ac_prog_java_works.m4  ac_prog_javac.m4  ac_prog_javac_works.m4  ac_try_compile_java.m4
eyedb-work/trunk/scripts/: newtopic
eyedb-work/trunk/scripts/template/: Makefile.am
eyedb-work/trunk/src/: Makefile.am
eyedb-work/trunk/topics/: Makefile.am
eyedb-work/trunk/topics/dict/: ChangeLog  Makefile.am
eyedb-work/trunk/topics/dump_restore/: ChangeLog  Makefile.am  bug.sh  createdb.sh  schema.odl
eyedb-work/trunk/topics/index/: ChangeLog  Makefile.am  createdb.sh  fill.sh  schema.odl  select.sh  test.sh
eyedb-work/trunk/topics/java-unix-socket/: .classpath  .project  ChangeLog  Client.java  LocalServer.java  Makefile.am  Server.java  TestLocalServer.java  TestTCPServer.java
eyedb-work/trunk/topics/jodl/: .classpath  .project
eyedb-work/trunk/topics/objgarb/: 2phasesimul.cc  ChangeLog  Makefile.am  cycsimul.cc  objgarb.cc  objgarb.sh  objgarb_2.cc  objgarb_3.cc  schema.odl  smartptr.cc
eyedb-work/trunk/topics/odlplugin/: ChangeLog  Makefile.am  plugin.cc  schema.odl
eyedb-work/trunk/topics/php/: ChangeLog  Makefile.am  Makefile.in
eyedb-work/trunk/topics/ruby/: ChangeLog  Makefile.in
eyedb-work/trunk/topics/schemaflex/: ChangeLog  Makefile.am  basic.odl  basic.sh  rename_attr.odl  rename_attr.sh  rename_cls.odl  rename_cls.sh  rename_cls_attr.odl  rename_cls_attr.sh  simple.odl  simple.sh  suppress_attr.odl  suppress_attr.sh  suppress_attr_complex.odl  suppress_attr_complex.sh
eyedb-work/trunk/topics/union/: ChangeLog  Makefile.am
eyedb-work/trunk/topics/utils/: Makefile.am  properties.cc
eyedb-work/trunk/topics/virtattr/: ChangeLog  Makefile.am  createdb.sh  schema.odl
eyedb/tags/V2_7_1/: ChangeLog  Makefile.am  configure.in
eyedb/tags/V2_7_1/examples/: Makefile.am  Makefile.eyedb.in
eyedb/tags/V2_8_5/doc/: Makefile.am
eyedb/trunk/: AUTHORS  ChangeLog  Makefile.am  README  VERSION  autogen.sh  configure.in
eyedb/trunk/doc/: Makefile.am  eyedbdoc.css  index.html  publications.html
eyedb/trunk/doc/doxygen/: Makefile.am
eyedb/trunk/doc/images/: Makefile.am
eyedb/trunk/doc/javadoc/: Makefile.am
eyedb/trunk/doc/manpages/: Makefile.am  STATUS  eyedb-common-options.xml  eyedb-options.xml  eyedbadmin.xml  eyedbadmin_subcmd.txt  eyedbcollimpladmin.xml  eyedbcollimplstats.xml  eyedbconsadmin_subcmd.txt  eyedbconslist.xml  eyedbd.xml  eyedbdatlist.xml  eyedbdbaccess.xml  eyedbdbcopy.xml  eyedbdbcreate.xml  eyedbdbdelete.xml  eyedbdbexport.xml  eyedbdbimport.xml  eyedbdblist.xml  eyedbdbmcreate.xml  eyedbdbmove.xml  eyedbdbrename.xml  eyedbdsplist.xml  eyedbgetattrloca.xml  eyedbgetdefdsp.xml  eyedbgetenv.xml  eyedbgetidxloca.xml  eyedbidxadmin.xml  eyedbidxsimulate.xml  eyedbloca.xml  eyedbmvidx.xml  eyedboql.xml  eyedbpasswd.xml  eyedbsysaccess.xml  eyedbuseradd.xml  eyedbuserdbaccess.xml  eyedbuserdelete.xml  eyedbuserlist.xml  eyedbuserpasswd.xml  manpage.sh
eyedb/trunk/doc/manual/: Administration.tex  CplusplusBinding.tex  GettingStarted.tex  JavaBinding.tex  Makefile.am  ODL.tex  OQL.tex  Overview.tex  latex2html-init.in  start.tex  title.tex
eyedb/trunk/doc/misc/: howto-release-eyedb.txt
eyedb/trunk/doc/release-notes/: EyeDBReleaseNotes.html  Makefile.am
eyedb/trunk/examples/: Makefile.am  Makefile.eyedb.in  README
eyedb/trunk/examples/C++Binding/: Makefile.am
eyedb/trunk/examples/GettingStarted/: Makefile.am  Makefile.eyedb-examples.in  PersonTest.java  README  init.sh  persontest.cc
eyedb/trunk/examples/JavaBinding/: Makefile.am
eyedb/trunk/include/eyedb/: AbstractIterator.h  Agregat.h  AgregatClass.h  Architecture.h  Argument.h  Attribute.h  Basic.h  BasicClass.h  Byte.h  ByteClass.h  Char.h  CharClass.h  Class.h  ClassIterator.h  ClientConfig.h  CollArray.h  CollArrayClass.h  CollBag.h  CollBagClass.h  CollImpl.h  CollList.h  CollListClass.h  CollSet.h  CollSetClass.h  Collection.h  CollectionClass.h  CollectionIterator.h  Config.h  Connection.h  DBM.h  Database.h  Datafile.h  Dataspace.h  Enum.h  EnumClass.h  Error.h  Exception.h  Float.h  FloatClass.h  GenHashTable.h  (+37 more)
eyedb/trunk/include/eyedblib/: Makefile.am  butils.h  connman.h  filelib.h  iassert.h  log.h  m_malloc.h  m_mem.h  machtypes.h  math.h  performer.h  probe.h  rpc.h  rpc_be.h  rpc_fe.h  rpc_lib.h  rpcdb.h  rpcdb_be.h  semlib.h  shmlib.h  std_alloc.h  stdlist.h  strutils.h  thread.h  xdr.h
eyedb/trunk/install/: Makefile.am
eyedb/trunk/scripts/: Makefile.am  eyedb-postinstall.sh.in  eyedb-rpcgen  eyedb-tagroot  eyedb.init  eyedb.rc.in  eyedbenv.sh.in  eyedbjrun.in
eyedb/trunk/src/: Makefile.am
eyedb/trunk/tests/: Makefile.am
(+3093 files in other folders)
