# 
# configure.in for eyedb-benchmarks
# 

AC_INIT(scripts/newtopic)

PACKAGE_NAME=eyedb-work
PACKAGE_VERSION=0.0.0

AC_CONFIG_MACRO_DIR(m4/java)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(${PACKAGE_NAME}, ${PACKAGE_VERSION})

# Collect enable arguments
#
# debug
AC_ARG_ENABLE(debug,
		AS_HELP_STRING([--enable-debug],
				[compile with debug [default=no]]),,
		enable_debug="no")

AC_PROG_CXX
AC_PROG_LIBTOOL

if test "$enable_debug" = "yes"
then
  CXXFLAGS="$CXXFLAGS -g"
fi

PKG_CHECK_MODULES(EYEDB, eyedb)
AC_SUBST(EYEDB_CFLAGS)
AC_SUBST(EYEDB_LIBS)

AC_MSG_CHECKING([for EyeDB pkgconfig 'libdir' variable])
EYEDB_LIBDIR=`$PKG_CONFIG --variable=libdir eyedb`
AC_MSG_RESULT($EYEDB_LIBDIR)

AC_MSG_CHECKING([for EyeDB pkgconfig 'bindir' variable])
EYEDB_BINDIR=`$PKG_CONFIG --variable=bindir eyedb`
AC_MSG_RESULT($EYEDB_BINDIR)

AC_SUBST(EYEDB_LIBDIR)
AC_SUBST(EYEDB_BINDIR)

#
# Java
#
case "$host" in
powerpc-apple-darwin*)
	if test x"$JAVAC" = x ; then export JAVAC=javac ; fi
	;;
esac

AC_PROG_JAVAC
export CLASSPATH=.
AC_PROG_JAVA
AC_PATH_PROG(JAR, jar)

if test "$enable_debug" = "yes"
then
	JAVACFLAGS="$JAVACFLAGS -g"
fi

# ========================================
# Generate output files
# ========================================
AC_OUTPUT(
Makefile
topics/Makefile
topics/bugs/OQL_1/Makefile
topics/bugs/OQL_2/Makefile
topics/bugs/OQL_3/Makefile
topics/bugs/OQL_4/Makefile
topics/collections/basic/Makefile
topics/collections/general/Makefile
topics/collections/literal/Makefile
topics/collections/set/Makefile
topics/dict/Makefile
topics/dump_restore/Makefile
topics/eyedbsm/online_backup/Makefile
topics/index/Makefile
topics/java-unix-socket/Makefile
topics/objgarb/Makefile
topics/odlplugin/Makefile
topics/oql/array/Makefile
topics/schemaflex/Makefile
topics/union/Makefile
topics/virtattr/Makefile
)
